--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
+version: '3.8'
 services:
   todo-app:
     build: .
-    ports:
-      - "${PORT:-10100}:80"
-    container_name: todo-app-container
+    container_name: todo-app
+    expose:
+      - "80"
+    networks:
+      - web
+
+networks:
+  web:
+    external: true
